# DouBase

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-06-26-doubase-mvp.md  2026-06-30-chunk-strategy-optimization.md  2026-07-06-conversation-memory.md  2026-07-06-query-optimization.md
docs/superpowers/specs/: 2026-06-26-doubase-agent-design.md  2026-06-30-chunk-strategy-design.md  2026-07-06-conversation-memory-design.md  2026-07-06-query-optimization-design.md
doubase/: __init__.py  api_retry.py  cli.py  config.py  memory.py  pipeline.py  query_optimizer.py  repl.py  voice.py  watch.py
doubase/analyzer/: __init__.py  analyzer.py  scanner.py  writer.py
doubase/chunker/: __init__.py  chunker.py  heading_splitter.py  semantic_merger.py
doubase/embedding/: __init__.py  base.py  local.py  zhipu.py
doubase/generation/: __init__.py  base.py  deepseek.py  openai_compat.py
doubase/parsers/: __init__.py  base.py  docx.py  markdown.py  pdf.py
doubase/retrieval/: __init__.py  retriever.py
doubase/storage/: __init__.py  vector_store.py
tests/: conftest.py  test_api_retry.py  test_chunker.py  test_cli.py  test_config.py  test_embedding.py  test_generation.py  test_heading_splitter.py  test_memory.py  test_pipeline.py  test_query_optimizer.py  test_rerank.py  test_retriever.py  test_semantic_merger.py  test_vector_store.py
tests/test_analyzer/: test_scanner.py
tests/test_analyzer/fixtures/mini_project/core/: engine.py
tests/test_analyzer/fixtures/mini_project/utils/: helper.py
tests/test_parsers/: test_docx.py  test_markdown.py  test_pdf.py
tests/test_parsers/fixtures/: test.md
